# oerec

./: .gitignore  Cargo.toml  LICENSE  README.adoc  build.rs  build.sh  oerec.toml
postgresql/: oere.init.psql
scripts/: README.adoc  deploy_keys.sh
shell/: oerec.aliases  oerec.bash
src/: add.rs  cli.rs  delete.rs  generate.rs  key.rs  list.rs  logging.rs  main.rs  maintenance.rs  schema.rs  server.rs  serveraccess.rs  serverauth.rs  servergroup.rs  update.rs  user.rs  useraccess.rs  usergroup.rs  write.rs
src/commands/: key.rs  mod.rs  server.rs  serveraccess.rs  serverauth.rs  servergroup.rs  user.rs  useraccess.rs  usergroup.rs
