[package]
name = "oerec"
version = "0.7.2"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
base64 ="0.13"
clap = { version = "4", default-features = false, features = ["std"] }
home = "0.5"
log = "0.4"
owo-colors = { version = "3", features = ["supports-colors"] }
postgres = "0.19"
postgres-types = { version = "0.2", features = ["derive", "with-time-0_3"] }
prettytable-rs = { version = "0.9", default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.10"
simplelog = "0.12"
time = { version = "0.3", features = ["parsing"] }
toml = "0.5"
walkdir = "2"

[build-dependencies]
clap = { version = "4", default-features = false, features = ["std"] }
clap_complete = "4"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
debug = true
