[package]
name = "oerec"
version = "0.8.0"
edition = "2021"
publish = false

[dependencies]
base64 ="0.22"
home = "0.5"
lexopt = "0.3.0"
libc = "0.2.153"
log = "0.4"
owo-colors = { version = "4", features = ["supports-colors"] }
postgres = "0.19"
postgres-types = { version = "0.2", features = ["derive", "with-time-0_3"] }
prettytable-rs = { version = "0.10", default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.10"
simplelog = "0.12"
time = { version = "0.3", features = ["parsing"] }
toml = "0.8"
walkdir = "2"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
debug = true
